--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -71,7 +71,7 @@
                 <h4 style="color:darkblue">  Jan-Feb-Mar 2023 Balance = 1,35,000  </h4>
                 <h4 style="color:darkblue">  Apr-May-Jun 2023 Balance = 1,26,000  </h4>
                 <h4 style="color:darkblue">  Jul-Aug-Sep 2023 Balance = 3,30,000  </h4>
-                <h4 style="color:darkblue">  Oct-Nov-Dec 2023 Balance = 78,000  </h4> <!--591000 -Total-->
+                <h4 style="color:darkblue">  Oct-Nov-Dec 2023 Balance = 156,000  </h4> <!--591000 -Total-->
                 <a class="image-link" href="img/Recipt_JanToMar.jpg"><img src="img/ClickHere.jpg"></a>
 
                 <h4 style="color:rgb(63, 13, 229)">  Final Balance = <span id="TotalCollection"></span> </h4>
@@ -154,7 +154,7 @@
 	 var list = [];
   list.push("	P1-Villa-1	,Pooja Saxena,,,,,,,,,,,,");
   list.push("	P1-Villa-4	,Pushpa & Bhupesh Saini,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
-  list.push("	P1-Villa-5	,Shishir Maltiyar,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-5	,Shishir Maltiyar,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-6	,Hemant Kumar & Nikita,,,,,,,,,,,,");
   list.push("	P1-Villa-7	,Rahul & Anuja,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-8	,Anil & Ruchi Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
@@ -173,9 +173,9 @@
   list.push("	P1-Villa-21	,Dariya Singh,,,,,,,,,,,,");
   list.push("	P1-Villa-22	,Shivani Sanjay Sharma,,,,,,,,,,,,");
   list.push("	P1-Villa-23	,Akshy Saraswat,,,,,,,,,,,,");
-  list.push("	P1-Villa-24	,Abhimanyu Saraswat,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-24	,Abhimanyu Saraswat,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-25	,Pooja Khandelwal,0,0,0,0,0,0,2000,2000,2000,,,");
-  list.push("	P1-Villa-26	,Rakesh Kumar,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-26	,Rakesh Kumar,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-27	,Murari Omprakash Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-28	,Mohit Juneja,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-29	,Lokshita Mathur,,,,,,,,,,,,");
@@ -183,7 +183,7 @@
   list.push("	P1-Villa-31	,Mahesh Tapariya,,,,,,,,,,,,");
   list.push("	P1-Villa-32	,Peeyush Verma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-33	,Prakash Joshi,1000,1000,1000,1000,1000,1000,,,,,,");
-  list.push("	P1-Villa-34	,Vijay Meena,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-34	,Vijay Meena,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-35	,Arpit Nogama,,,,,,,,,,,,");
   list.push("	P1-Villa-36	,Harish Kumar Yadav,,,,,,,,,,,,");
   list.push("	P1-Villa-37	,Gajendra Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
@@ -193,7 +193,7 @@
   list.push("	P1-Villa-41	,Monika Mittal,,,,,,,,,,,,");
   list.push("	P1-Villa-42	,Prakash & Rekha Gaur,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-43	,Arun Tripathi,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
-  list.push("	P1-Villa-44	,Ravindra Verma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-44	,Ravindra Verma,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-45	,Nand Singh Rajawat,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-46	,Vikas Mahala,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-47	,Manoj Ji,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
@@ -249,8 +249,8 @@
   list.push("	P1-Villa-96	,George Pal Singh,,,,,,,,,,,,");
   list.push("	P1-Villa-97	,Surendra Kumawat,,,,,,,,,,,,");
   list.push("	P2-Villa-01	,Mayank Goyal,,,,,,,2000,2000,2000,,,");
-  list.push("	P2-Villa-03	,Himmat Singh,,,,,,,2000,2000,2000,,,");
-  list.push("	P2-Villa-04	,Meghraj Khandelwal,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-03	,Himmat Singh,,,,,,,2000,2000,2000,2000,2000,2000");
+  list.push("	P2-Villa-04	,Meghraj Khandelwal,,,,,,,2000,2000,2000,2000,2000,2000");
   list.push("	P2-Villa-06	,Monika	Kheskani,,,,,,,2000,2000,2000,2000,2000,2000");
   list.push("	P2-Villa-08	,Raj Kumar Sharma,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-09	,Raj Kumar Sharma,,,,,,,2000,2000,2000,2000,2000,2000");
@@ -258,9 +258,13 @@
   list.push("	P2-Villa-31	,Navdeep Kumar,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-27	,Yogesh Kumar Choudhary,,,,,,,2000,2000,2000,,,");
   list.push("   P2-Villa-49 ,Priti Gehlot,,,,,,,2000,2000,2000,,,");
-  list.push("	P2-Villa-71	,Preety	Roy,,,,,,,2000,2000,2000,,,");
-  list.push("	P2-Villa-72	,Hari Om Meena,,,,,,,2000,2000,2000,,,");
-  list.push("	P2-Villa-73	,Yogesh Lakhera,,,,,,,2000,2000,2000,,,");
+
+  list.push("   P2-Villa-60,Mahendra kumar arya,,,,,,,,,,2000,2000,2000"); 
+  list.push("   P2-Villa-66,Dinesh kumar Kaushik,,,,,,,,,,2000,2000,2000"); 
+  list.push("   P2-Villa-70,Yogyata singh,,,,,,,,,,2000,2000,2000"); 
+  list.push("	P2-Villa-71	,Preety	Roy,,,,,,,2000,2000,2000,2000,2000,2000");
+  list.push("	P2-Villa-72	,Hari Om Meena,,,,,,,2000,2000,2000,2000,2000,2000");
+  list.push("	P2-Villa-73	,Yogesh Lakhera,,,,,,,2000,2000,2000,2000,2000,2000");
 
 	 generateTable(list)  
 	}
