--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -209,8 +209,8 @@
      list.push("P1-Villa-85,@Pradeep Verma,@,@3,@Owner"); 
      list.push("P1-Villa-86,@Surendra Agrawal,@9414002683,@3,@Owner"); 
      list.push("P1-Villa-87,@Devendra Singh,@9773893352,@3,@Owner"); 
-     list.push("P1-Villa-88,@Pankaj Chauhan,@9772525987,@4,@Owner"); 
-     list.push("P1-Villa-88,@Pushpa Tomar,@9772525987,@2,@Owner"); 
+     list.push("P1-Villa-88,@Pankaj Chauhan & Pushpa Tomar,@9772525987,@4,@Owner"); 
+    
 list.push("P1-Villa-89,@Khem Chand Nagal,@9610000231,@2,@Owner"); 
 list.push("P1-Villa-90,@Vivek Dubey,@9610000241,@2,@Owner"); 
 list.push("P1-Villa-91,@Rajendra Prasad Gupta,@8875026975,@2,@Owner"); 
