--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 	
 
 		-->
-		<p style="color: rgb(229, 54, 19)"><b>  Details are updated till 25 Oct 2023, 08:15 AM   </b></p>
+		<p style="color: rgb(229, 54, 19)"><b>  Details are updated till 26 Oct 2023, 08:31 PM   </b></p>
 
 	
 
