--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -161,7 +161,7 @@
      list.push("P1-Villa-32,@Peeyush Verma,@9560055323,@3,@Owner"); 
      list.push("P1-Villa-33,@Prakash Joshi,@8128028832,@2,@Owner"); 
      list.push("P1-Villa-34,@Vijay Meena,@9667392585,@3,@Owner"); 
-     list.push("P1-Villa-35,@Arpit Nogama,@9910207051,@2,@Owner"); 
+     list.push("P1-Villa-35,@Saraswat Ji,@,@2,@Owner"); 
      list.push("P1-Villa-36,@Harish Kumar Yadav,@8826779995,@2,@Owner"); 
      list.push("P1-Villa-37,@Gajendra Sharma,@9166122226,@5,@Owner"); 
      list.push("P1-Villa-38,@ManishaSingh,@9887628512,@2,@Owner"); 
