--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -71,7 +71,7 @@
                 <h4 style="color:darkblue">  Jan-Feb-Mar 2023 Balance = 1,35,000  </h4>
                 <h4 style="color:darkblue">  Apr-May-Jun 2023 Balance = 1,26,000  </h4>
                 <h4 style="color:darkblue">  Jul-Aug-Sep 2023 Balance = 3,30,000  </h4>
-                <h4 style="color:darkblue">  Oct-Nov-Dec 2023 Balance = 156,000  </h4> <!--591000 -Total-->
+                <h4 style="color:darkblue">  Oct-Nov-Dec 2023 Balance = 2,10,000  </h4> <!--591000 -Total-->
                 <a class="image-link" href="img/Recipt_JanToMar.jpg"><img src="img/ClickHere.jpg"></a>
 
                 <h4 style="color:rgb(63, 13, 229)">  Final Balance = <span id="TotalCollection"></span> </h4>
@@ -163,7 +163,7 @@
   list.push("	P1-Villa-11	,Poonam & Sundeep Mahala,1000,1000,1000,,,,,,,,,");
   list.push("	P1-Villa-12	,Gaurav Kothari,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-13	,Anil Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-14	,Ayush Shandilya,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-14	,Ayush Shandilya,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-15	,,,,,,,,,,,,,");
   list.push("	P1-Villa-16	,Preeti Meena,0,0,0,0,0,0,2000,2000,2000,,,");
   list.push("	P1-Villa-17	,Khushi & Raju Khandelwal,,,,,,,,,,,,");
@@ -194,7 +194,7 @@
   list.push("	P1-Villa-42	,Prakash & Rekha Gaur,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-43	,Arun Tripathi,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-44	,Ravindra Verma,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
-  list.push("	P1-Villa-45	,Nand Singh Rajawat,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-45	,Nand Singh Rajawat,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-46	,Vikas Mahala,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-47	,Manoj Ji,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-48	,R C Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
@@ -236,7 +236,7 @@
   list.push("	P1-Villa-83	,Tarun Sharda,,,,,,,,,,,,");
   list.push("	P1-Villa-84	,Tarun Sharda,,,,,,,,,,,,");
   list.push("	P1-Villa-85	,Pradeep Verma,1000,1000,1000,,,,,,,,,");
-  list.push("	P1-Villa-86	,Surendra Agrawal,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-86	,Surendra Agrawal,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-87	,Devendra Singh,0,0,0,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-88	,Pankaj Chauhan,1000,1000,1000,1000,1000,1000,,,,,,");
   list.push("	P1-Villa-89	,Khem Chand Nagal,,,,,,,,,,,,");
@@ -254,10 +254,12 @@
   list.push("	P2-Villa-06	,Monika	Kheskani,,,,,,,2000,2000,2000,2000,2000,2000");
   list.push("	P2-Villa-08	,Raj Kumar Sharma,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-09	,Raj Kumar Sharma,,,,,,,2000,2000,2000,2000,2000,2000");
-  list.push("	P2-Villa-16	,Seema	Asawat,,,,,,,2000,2000,2000,,,");
-  list.push("	P2-Villa-31	,Navdeep Kumar,,,,,,,2000,2000,2000,,,");
-  list.push("	P2-Villa-27	,Yogesh Kumar Choudhary,,,,,,,2000,2000,2000,,,");
-  list.push("   P2-Villa-49 ,Priti Gehlot,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-13	,Ankur Surana,,,,,,,,,,2000,2000,2000");
+  list.push("	P2-Villa-16	,Seema	Asawat,,,,,,,2000,2000,2000,2000,2000,2000");
+  list.push("	P2-Villa-25	,Manisha Sharma,,,,,,,,,,2000,2000,2000");
+  list.push("	P2-Villa-27	,Yogesh Kumar Choudhary,,,,,,,2000,2000,2000,2000,2000,2000");
+  list.push("	P2-Villa-31	,Navdeep Kumar,,,,,,,2000,2000,2000,2000,2000,2000");
+  list.push("   P2-Villa-49 ,Priti Gehlot,,,,,,,2000,2000,2000,2000,2000,2000");
 
   list.push("   P2-Villa-60,Mahendra kumar arya,,,,,,,,,,2000,2000,2000"); 
   list.push("   P2-Villa-66,Dinesh kumar Kaushik,,,,,,,,,,2000,2000,2000"); 
