--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -67,11 +67,12 @@
                 <!--<h4 style="color:darkgreen">  Account: ########### , IFSC Code: $$$$$$$$$$ </h4>-->
                 <!--<h4 style="color:darkgreen">  Cash / Online Amount to Pankaj Ji (Mobile No. 9929199901) Shubh Villa </h4>-->
                 <h4 style="color:darkgreen">  Cash only at Villa No. 10 </h4>
+                <h4 style="color:darkgreen">  48000 collected at Villa No. 73 </h4>
                 <br>
                 <h4 style="color:darkblue">  Jan-Feb-Mar 2023 Balance = 1,35,000  </h4>
                 <h4 style="color:darkblue">  Apr-May-Jun 2023 Balance = 1,26,000  </h4>
                 <h4 style="color:darkblue">  Jul-Aug-Sep 2023 Balance = 3,30,000  </h4>
-                <h4 style="color:darkblue">  Oct-Nov-Dec 2023 Balance = 2,10,000  </h4> <!--591000 -Total-->
+                <h4 style="color:darkblue">  Oct-Nov-Dec 2023 Balance = 2,70,000  </h4> <!--591000 -Total-->
                 <a class="image-link" href="img/Recipt_JanToMar.jpg"><img src="img/ClickHere.jpg"></a>
 
                 <h4 style="color:rgb(63, 13, 229)">  Final Balance = <span id="TotalCollection"></span> </h4>
@@ -184,7 +185,7 @@
   list.push("	P1-Villa-32	,Peeyush Verma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-33	,Prakash Joshi,1000,1000,1000,1000,1000,1000,,,,,,");
   list.push("	P1-Villa-34	,Vijay Meena,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
-  list.push("	P1-Villa-35	,Saraswat Ji,,,,,,,,,,,,");
+  list.push("	P1-Villa-35	,D V Saraswat & Kusum Saraswat,,,,,,,,,,,,");
   list.push("	P1-Villa-36	,Harish Kumar Yadav,,,,,,,,,,,,");
   list.push("	P1-Villa-37	,Gajendra Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-38	,Manisha Singh,,,,,,,,,,,,");
@@ -196,8 +197,8 @@
   list.push("	P1-Villa-44	,Ravindra Verma,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-45	,Nand Singh Rajawat,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-46	,Vikas Mahala,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-47	,Manoj Ji,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-48	,R C Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-47	,Manoj Ji,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
+  list.push("	P1-Villa-48	,R C Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-49	,Sunita Verma,,,,,,,,,,,,");
   list.push("	P1-Villa-50	,Abhishek Garg,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-51	,Jatin Kumar,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
@@ -215,19 +216,19 @@
   list.push("	P1-Villa-62	,Lal Singh,0,0,0,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-63	,Yogesh Gupta,,,,,,,,,,,,");
   list.push("	P1-Villa-64	,Sahil Meghnani,0,0,0,0,0,0,2000,2000,2000,,,");
-  list.push("	P1-Villa-65	,Jalaj Rajpurohit,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-65	,Jalaj Rajpurohit,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-66	,Manju Gehlot,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-67	,Abhishek Jaiman,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-67	,Abhishek Jaiman,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-68	,Shrish Jaiman,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-69	,Piyush Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-70	,Vineet Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-71	,Suresh kumar Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-69	,Piyush Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
+  list.push("	P1-Villa-70	,Vineet Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
+  list.push("	P1-Villa-71	,Suresh kumar Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-72	,Nikesh Chaudhary,1000,1000,1000,,,,,,,,,");
-  list.push("	P1-Villa-73	,Richa Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-73	,Richa Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-74	,Praveen Prajapat,,,,,,,,,,,,");
   list.push("	P1-Villa-75	,Archna Goswami,,,,,,,,,,,,");
-  list.push("	P1-Villa-76	,S N Nagal,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-77	,Devki Nandan Mathuriya,0,0,0,0,0,0,2000,2000,2000,,,");
+  list.push("	P1-Villa-76	,S N Nagal,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
+  list.push("	P1-Villa-77	,Devki Nandan Mathuriya,0,0,0,0,0,0,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-78	,Akshat Mangal,,,,,,,,,,,,");
   list.push("	P1-Villa-79	,Rahul Peswani,,,,,,,,,,,,");
   list.push("	P1-Villa-80	,Rahul Peswani,,,,,,,,,,,,");
