--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -151,7 +151,7 @@
      list.push("P1-Villa-22,@Shivani sanjeev sharma,@8306677784,@2,@Owner"); 
      list.push("P1-Villa-23,@Akshay Saraswat,@9414435301,@2,@Owner"); 
      list.push("P1-Villa-24,@Abhimanyu Saraswat,@9461594523,@4,@Owner"); 
-     list.push("P1-Villa-25,@Pooja Khandelwal,@ 9414622244,@2,@Owner"); 
+     list.push("P1-Villa-25,@Pooja Khandelwal,@9414622244,@2,@Owner"); 
      list.push("P1-Villa-26,@Rakesh Kumar,@9079205061,@3,@Owner"); 
      list.push("P1-Villa-27,@Deepesh Sharma,@9829192929,@3,@Owner"); 
      list.push("P1-Villa-28,@Mohit Juneja,@7014643282,@4,@Owner"); 
@@ -161,7 +161,7 @@
      list.push("P1-Villa-32,@Peeyush Verma,@9560055323,@3,@Owner"); 
      list.push("P1-Villa-33,@Prakash Joshi,@8128028832,@2,@Owner"); 
      list.push("P1-Villa-34,@Vijay Meena,@9667392585,@3,@Owner"); 
-     list.push("P1-Villa-35,@Saraswat Ji,@,@2,@Owner"); 
+     list.push("P1-Villa-35,@D V Saraswat & Kusum Saraswat,@9462442244,@2,@Owner"); 
      list.push("P1-Villa-36,@Harish Kumar Yadav,@8826779995,@2,@Owner"); 
      list.push("P1-Villa-37,@Gajendra Sharma,@9166122226,@5,@Owner"); 
      list.push("P1-Villa-38,@ManishaSingh,@9887628512,@2,@Owner"); 
