--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 		<p style="color: rgb(229, 54, 19)"><b>  Details are updated till 09 Nov 2023, 09:30 PM   </b></p>
 
 	
-
+<!--
 		<div style="margin-top:50px">
 			<div>
 			<h3 style=" text-align: center; color: green;">Shubh Villa RWA Padadhikari</h3>
@@ -240,6 +240,7 @@
 				</div>
 			</div>
 		</div>
+		-->
 <!--
 		<pre style="color: rgb(35, 9, 228)">
 			नव गठित कार्यकारिणी निम्नानुसार है 
@@ -278,7 +279,7 @@
 							<h2>
 								<a href="#">Meeting & Update</a>
 							</h2>
-							<p style="color: red">Expected next Meeting on Sunday 29-Oct-2023, but not confirmed yet.</p> 
+							<p style="color: rgb(4, 80, 24)">Expected next Meeting on Sunday 21-Jan-2024, 10:00 AM, As per last meeting decided meeting on every 4th Sunday.</p> 
 							<!--<p style="color: red">Next Meeting date not decided yet.</p> -->
 							<!--<p style="color: rgb(6, 151, 38)">A fortnightly meeting (once every two weeks) between villa owners on Saturday evening or Sunday morning. </p>
 							
@@ -338,7 +339,7 @@
 				<div align="left" ">
 					<h4 font size="8"style="color: rgb(47, 11, 226)"> Following festival were identified for celebration in society</div></H4>
 
-					<p style="color: rgb(151, 6, 83)" >1.	Paush Bada (Any date between 1st of JAN to 14th JAN) [Menu Halwa+Bada+Puri+Sabji for colony members and dona Prasadi for others]</p>
+					<p style="color: rgb(151, 6, 83)" >1.	Paush Bada 21-Jan-2024 [Menu Halwa+Bada+Puri+Sabji for colony members and dona Prasadi for others]</p>
 					<p style="color: rgb(6, 151, 38)">2.	Republic day: Flag hoisting and laddu distribution</p>
 					<p style="color: rgb(6, 151, 38)">3.	Mahashivaratri: Mandir decoration and Pooja </p>
 					<p style="color: rgb(151, 6, 83)">4.	Holi Milan: Combined Holi celebration (Color and Thandai to be arranged by cultural committee)+Dinner+ DJ</p>
