--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		<marquee  scrollamount="5" style= "color:rgb(245, 113, 6) ; font-size:20px" height="30px" > 
 			<p> Upcoming Event: Ram Aayege.... 22-Jan-2024 </p>
 				   </marquee>      
-       <img class="NO-CACHE" data-src="img/Ram.jpg" alt="" style="margin-bottom: 22px;">
+       <img class="NO-CACHE" data-src="img/Ram.jpg" width="250px" heigt="250px" alt="" style="margin-bottom: 22px;">
 	   
 	   
   
@@ -118,6 +118,8 @@
 	
 	<p> Upcoming Event: Poshbada.... 21-Jan-2024 </p>
 </marquee>
+
+<img class="NO-CACHE" data-src="img/Poshbada_1.jpg" width="250px" heigt="250px" alt="" style="margin-bottom: 22px;">
 
     <!--
    <marquee behavior="slide" direction="left">
