--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 									
 									<!--<li><a href="COVID19.html">COVID - 19</a></li>-->
 									<li><a href="OwnersRentDetails.html">Owners\Tenants Details</a></li>
-									<li><a href="MonthlyActivityFund.html">Society Activity Fund</a></li>
-									<li><a href="MonthlyMaintenance.html">Monthly Maintenance</a></li>
+									<!--For Now <li><a href="MonthlyActivityFund.html">Society Activity Fund</a></li>-->
+									<!--For Now <li><a href="MonthlyMaintenance.html">Monthly Maintenance</a></li>-->
 									<!--<li><a href="MonthlyCreditDebit.html">Collection/Expenditure</a></li>-->
 									<!--<li><a href="OtherActivity.html">Other Activity</a></li>-->
-									<li><a href="MeetingHistory.html">Meeting History</a></li>
+									<!--For Now <li><a href="MeetingHistory.html">Meeting History</a></li>-->
 									<!--<li><a href="VisitorDetails.html">Visitor Details</a></li>-->
 									<!--<li><a href="OCDinner.html">OC Status</a></li>-->
 									<!--<li><a href="ViewDoc.html">Documents</a></li>--.
@@ -107,7 +107,7 @@
             </div>
         </div>-->
 		<marquee  scrollamount="5" style= "color:rgb(245, 113, 6) ; font-size:20px" height="30px" > 
-			<p> Upcoming Event: Ram Aayege.... 22-Jan-2024 </p>
+			<p> Upcoming Event: Ram Aayege in Shubh Villa.... 22-Jan-2024...  </p>
 				   </marquee>      
        <img class="NO-CACHE" data-src="img/Ram.jpg" width="250px" heigt="250px" alt="" style="margin-bottom: 22px;">
 	   
