--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 </div>
             </div>
         </div>-->
+		<!--
 		<marquee  scrollamount="5" style= "color:rgb(245, 113, 6) ; font-size:20px" height="30px" > 
 			<p> Upcoming Event: Ram Aayege in Shubh Villa.... 22-Jan-2024...  </p>
 				   </marquee>      
@@ -120,7 +121,7 @@
 </marquee>
 
 <img class="NO-CACHE" data-src="img/Poshbada_1.jpg" width="250px" heigt="250px" alt="" style="margin-bottom: 22px;">
-
+-->
     <!--
    <marquee behavior="slide" direction="left">
 	<img src="img/Ramnavmi.jpg" width="260" height="170" />s
@@ -286,7 +287,7 @@
 							<h2>
 								<a href="#">Meeting & Update</a>
 							</h2>
-							<p style="color: rgb(4, 80, 24)">Expected next Meeting on 16-Jan-2024, 08:00 PM, As per last meeting decided socity meeting on every 4th Sunday.</p> 
+							<p style="color: rgb(4, 80, 24)">As per last meeting decided, socity meeting on every 4th Sunday at 10 AM.</p> 
 							<!--<p style="color: red">Next Meeting date not decided yet.</p> -->
 							<!--<p style="color: rgb(6, 151, 38)">A fortnightly meeting (once every two weeks) between villa owners on Saturday evening or Sunday morning. </p>
 							
