--- a/index.html
+++ b/index.html
@@ -287,6 +287,8 @@
 							<h2>
 								<a href="#">Meeting & Update</a>
 							</h2>
+							<p style="color: rgb(7, 23, 144)">Next Planned Meeting at Club House on 3rd March 2024, Sunday at 10 AM.</p> 
+
 							<p style="color: rgb(4, 80, 24)">As per last meeting decided, socity meeting on every 4th Sunday at 10 AM.</p> 
 							<!--<p style="color: red">Next Meeting date not decided yet.</p> -->
 							<!--<p style="color: rgb(6, 151, 38)">A fortnightly meeting (once every two weeks) between villa owners on Saturday evening or Sunday morning. </p>
