--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -130,7 +130,7 @@
      list.push("P1-Villa-07,@Rahul Pandey,@RJ45-CJ-2141,@"); 9672125813
      list.push("P1-Villa-09,@Raghvendra Sharma,@RJ45-CJ-9296,@"); 7976767857
      list.push("P1-Villa-10,@Jogendra Sachdeva,@RJ45-CP-8446,@"); 9828080386
-     list.push("P1-Villa-12,@Gaurav Kothari,@RJ14-CX-9887,@"); 9982567222
+     list.push("P1-Villa-12,@Gaurav Kothari,@RJ22-BH-5688C,@"); 9982567222
      list.push("P1-Villa-13,@Anil Sharma,@RJ14-CZ-2936,@"); 9983344889
      list.push("P1-Villa-24,@Abhimanyu Saraswat,@RJ01-CC-3068/ RJ01-CE-0919/ RJ14NC4125,@"); 9461594523
      list.push("P1-Villa-26,@Rakesh Kumar,@RJ45-CH-1989,@"); 9079205061
@@ -155,6 +155,7 @@
      list.push("P1-Villa-69,@Piyush Sharma,@RJ45-CR-5927,@RJ60SJ3391/RJ14HU5981"); 9828487854
      list.push("P1-Villa-71,@Suresh kumar Sharma,@RJ45-CL-6128,@"); 8875115223
      list.push("P1-Villa-88,@Pankaj Chauhan,@RJ14NC2986,@"); 
+     list.push("P1-Villa-98,@Hitesh Jain,@RJ192-C-4408,@2,@Owner"); 9251722324
     
 
 
