--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 					<p style="color: rgb(151, 6, 83)" >1.	Paush Bada 21-Jan-2024 [Menu Halwa+Bada+Puri+Sabji for colony members and dona Prasadi for others]</p>
 					<p style="color: rgb(6, 151, 38)">2.	Republic day: Flag hoisting and laddu distribution</p>
 					<p style="color: rgb(6, 151, 38)">3.	Mahashivaratri: Mandir decoration and Pooja </p>
-					<p style="color: rgb(151, 6, 83)">4.	Holi Milan: Combined Holi celebration (Color and Thandai to be arranged by cultural committee)+Dinner+ DJ</p>
+					<p style="color: rgb(151, 6, 83)">4.	Holi Milan: Combined Holi celebration </p>
 					<p style="color: rgb(6, 151, 38)">5.	Ramnavmi Chetra: decoration and panchamrat and dona prasadi</p>
 					<p style="color: rgb(6, 151, 38)">6.	Van mahotsav : Tree plantation by kids in colony aur near by area in First/Second week of July</p>
 					<p style="color: rgb(6, 151, 38)">7.	Janmashtami : Mandir decoration +Panchaarat and dona prasadi</p>
