--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -149,14 +149,16 @@
      list.push("P1-Villa-48,@R C Sharma ,@RJ45-CR-6566/ RJ20-CA-7231,@"); 7737061033
      list.push("P1-Villa-52,@Shailesh Bansal,@RJ45-CL-1120,@"); 9461856524
      list.push("P1-Villa-53,@Rohit Jain,@RJ45-CO-1142,@"); 9828576337
+     list.push("P1-Villa-64,@Sahil Meghnani,@RJ45-CJ-6502/RJ45-CV-1311,@");9929080804
      list.push("P1-Villa-65,@Jalaj Rajpurohit,@MH-46-BK-8091,@RJ14-KC-0941");
      list.push("P1-Villa-67,@Abhishek Jaiman,@,@RJ14-BH-9719"); 9414054353
      list.push("P1-Villa-68,@Shrish Jaiman,@RJ14-ZC-0181,@"); 9887629361
      list.push("P1-Villa-69,@Piyush Sharma,@RJ45-CR-5927,@RJ60SJ3391/RJ14HU5981"); 9828487854
      list.push("P1-Villa-71,@Suresh kumar Sharma,@RJ45-CL-6128,@"); 8875115223
+     list.push("P1-Villa-76,@Surya Nagal,@RJ03-CA-8935,@"); 9460892888
      list.push("P1-Villa-88,@Pankaj Chauhan,@RJ14NC2986,@"); 
-     list.push("P1-Villa-98,@Hitesh Jain,@RJ192-C-4408,@2,@Owner"); 9251722324
-    
+     list.push("P1-Villa-98,@Hitesh Jain,@RJ192-C-4408,@2,@"); 9251722324
+     list.push("P1-Villa-102,@Somya Chahar,@RJ05-CC-5230,@"); 8384925336
 
 
     
