--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -224,7 +224,7 @@ list.push("P1-Villa-98,@Hitesh Jain,@9251722324,@2,@Owner");
 list.push("P1-Villa-99,@Sakshi Singh,@9413249459,@2,@Owner"); 
 list.push("P1-Villa-100,@Akansha Garg,@9731123390,@2,@Owner"); 
 list.push("P1-Villa-101,@Laxmi Agarwal,@9660597792,@2,@Owner"); 
-list.push("P1-Villa-102,@Pratima Singh,@,@2,@Owner"); 
+list.push("P1-Villa-102,@Pratima Singh,@8384925336,@2,@Owner"); 
 list.push("P1-Villa-103,@Vandana Soni,@8094296135,@2,@Owner"); 
 list.push("P1-Villa-104,@Vandana Soni,@8094296135,@2,@Owner"); 
 list.push("P1-Villa-105,@Vandana Soni,@8094296135,@2,@Owner"); 
