--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -161,7 +161,7 @@
      list.push("P1-Villa-88,@Pankaj Chauhan,@RJ14NC2986,@"); 
      list.push("P1-Villa-98,@Hitesh Jain,@RJ192-C-4408,@"); 9251722324
      list.push("P1-Villa-102,@Somya Chahar,@RJ05-CC-5230,@"); 8384925336
-
+     list.push("P1-Villa-104,@Rajender Singh,@RJ45-CQ-6593,@"); 8094296135
 
     
       
