--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -226,7 +226,7 @@ list.push("P1-Villa-100,@Akansha Garg,@9731123390,@2,@Owner");
 list.push("P1-Villa-101,@Laxmi Agarwal,@9660597792,@2,@Owner"); 
 list.push("P1-Villa-102,@Pratima Singh,@8384925336,@2,@Owner"); 
 list.push("P1-Villa-103,@Vandana Soni,@8094296135,@2,@Owner"); 
-list.push("P1-Villa-104,@Vandana Soni,@8094296135,@2,@Owner"); 
+list.push("P1-Villa-104,@Rajender Singh,@8094296135,@2,@Owner"); 
 list.push("P1-Villa-105,@Vandana Soni,@8094296135,@2,@Owner"); 
 list.push("P1-Villa-106,@Vandana Soni,@8094296135,@2,@Owner"); 
 list.push("P1-Villa-107,@Rita Soni,@8949349670,@2,@Owner"); 
