--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -206,7 +206,7 @@
     list.push("P1-Villa-82,@Swati Bansal,@7737665601,@2,@Owner"); 
     list.push("P1-Villa-83,@Tarun Sharda,@,@2,@Owner"); 
     list.push("P1-Villa-84,@Tarun Sharda,@,@2,@Owner"); 
-     list.push("P1-Villa-85,@Pradeep Verma,@,@3,@Owner"); 
+     list.push("P1-Villa-85,@Pradeep Verma,@9460367969,@3,@Owner"); 
      list.push("P1-Villa-86,@Surendra Agrawal,@9414002683,@3,@Owner"); 
      list.push("P1-Villa-87,@Devendra Singh,@9773893352,@3,@Owner"); 
      list.push("P1-Villa-88,@Pankaj Chauhan & Pushpa Tomar,@9772525987,@4,@Owner"); 
