--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -158,6 +158,7 @@
      list.push("P1-Villa-69,@Piyush Sharma,@RJ45-CR-5927,@RJ60SJ3391/ RJ14HU5981"); 9828487854
      list.push("P1-Villa-71,@Suresh kumar Sharma,@RJ45-CL-6128,@"); 8875115223
      list.push("P1-Villa-76,@Surya Nagal,@RJ03-CA-8935,@RJ14KD9752"); 9460892888
+     list.push("P1-Villa-85,@Pradeep Verma,@RJ02-CD-8645,@"); 9460367969
      list.push("P1-Villa-88,@Pankaj Chauhan,@RJ14NC2986,@"); 
      list.push("P1-Villa-98,@Hitesh Jain,@RJ192-C-4408,@"); 9251722324
      list.push("P1-Villa-102,@Somya Chahar,@RJ05-CC-5230,@"); 8384925336
