--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -142,7 +142,7 @@
      list.push("P1-Villa-35,@D V Saraswat & Kusum Saraswat,@RJ01-CE-0439,@"); 9462442244
      list.push("P1-Villa-37,@Gajendra Sharma,@RJ45-CW-3525,@"); 9166122226
      list.push("P1-Villa-39,@Manish Salvi,@RJ14-CW-9432,@"); 9024048874
-     list.push("P1-Villa-42,@Prakash Gaur,@,@"); 9887444483
+    // list.push("P1-Villa-42,@Prakash Gaur,@,@"); 9887444483
      list.push("P1-Villa-43,@Arun Tripathi,@RJ45-CS-3351,@"); 8003068888
      list.push("P1-Villa-44,@Ravindra Verma,@RJ01-CE-0223,@"); 9928309236
      list.push("P1-Villa-45,@Nand Singh Rajawat,@RJ14-CH-4622,@"); 9928438888
