--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -67,7 +67,7 @@
                 <br>
                 <!--<h4 style="color:darkgreen">  Society Account Details </h4>
                 <h4 style="color:darkgreen">  Account: ########### , IFSC Code: $$$$$$$$$$ </h4>-->
-                <h4 style="color:darkgreen"> Quarterly Amount Collection 1000, Cash [ Villa No. 65 ] / Online at 9820684534 </h4>
+                <h4 style="color:darkgreen"> Quarterly Amount Collection 1000, Cash at [ Villa No. 65 ] / Online at 9820684534 </h4>
                 
                 <br>
                 <h4 style="color:darkgreen">  Final Balance = <span id="TotalCollection"></span> </h4>
