--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -161,7 +161,7 @@
         list.push("P1-Villa-23,@Akshay Saraswat,@,@,@,@"); 
         list.push("P1-Villa-24,@Abhimanyu Saraswat,@,@,@,@"); 
         list.push("P1-Villa-25,@Pooja Khandelwal,@,@,@,@"); 
-        list.push("P1-Villa-26,@Rakesh Kumar,@,@,@,@"); 
+        list.push("P1-Villa-26,@Rakesh Kumar,@1000,@,@,@"); 
         list.push("P1-Villa-27,@Deepesh Sharma,@,@,@,@"); 
         list.push("P1-Villa-28,@Mohit Juneja,@,@,@,@"); 
         list.push("P1-Villa-29,@Lokshita Mathur,@,@,@,@"); 
